# PlexiStruct

./: CMakeLists.txt  LICENSE.txt  main.cpp  readMe.md
include/engine/: utils.hpp  value.hpp
include/utils/: functional_utils.hpp
